# auto_impl_trait

./: .gitignore  Cargo.toml  README.md
proto/: runtime.v1.rs  runtime.v1alpha2.rs
src/: __const_zero.rs  __method_area.rs  __method_perimeter.rs  __method_scale.rs  __type_item.rs  area.rs  async_test.rs  item.rs  lib.rs  main.rs  perimeter.rs  rect_trait.rs  scale.rs  struct.rs  super_trait.rs  test.rs
