[package]
name = "auto_impl_trait"
version = "0.2.0"
edition = "2021"
authors = ["CGQAQ <m.jason.liu@outlook.com>"]
repository = "https://github.com/cgqaq/auto_impl_trait"
description = "auto impl trait by provide trait file"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full", "extra-traits"]}
quote = "1.0"
change-case = "0.2.0"