[package]
name = "auto_impl_trait"
version = "0.8.0"
edition = "2021"
authors = ["CGQAQ <m.jason.liu@outlook.com>"]
repository = "https://github.com/cgqaq/auto_impl_trait"
description = "auto impl trait by provide trait file"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full", "extra-traits", "visit", "visit-mut"]}
quote = "1.0"
change-case = "0.2.0"
proc-macro2 = "1.0.47"
tonic = { version = "0.8.2", features = ["codegen"] }
prost = "0.11.0"
